# advent-of-code-2022

./: .gitignore  .pre-commit-config.yaml  README.md  common.py  main.py  profiler.py  pyproject.toml  requirements.txt  runner.py
advent/: __init__.py  common.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
advent/day1/: __init__.py
advent/day2/: __init__.py
advent/day3/: __init__.py
advent/day4/: __init__.py
advent/day5/: __init__.py
day1/: __init__.py
day2/: __init__.py
tests/: advent_test.py  runner_test.py
tests/advent/: conftest.py  day10_test.py  day11_test.py  day12_test.py  day13_test.py  day14_test.py  day15_test.py  day16_test.py  day1_test.py  day2_test.py  day3_test.py  day4_test.py  day5_test.py  day6_test.py  day7_test.py  day8_test.py  day9_test.py
