[project]
name = "advent-of-code-2022"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["click>=8.1.8"]

[dependency-groups]
dev = [
    "ipython>=8.32.0",
    "line-profiler>=4.2.0",
    "pdbp>=1.6.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["B905"]

[tool.pyright]
reportMissingImports = "error"
reportMissingTypeStubs = false
reportImplicitOverride = "error"
reportUnusedImport = "error"
reportWildcardImportFromLibrary = "error"
typeCheckingMode = "strict"
pythonVersion = "3.13"
